# search-engine

./: .gitignore  CMakeLists.txt  README.md
files/: file1.txt  file2.txt
include/: converter_json.h  counting_dictionary.h  file_browser.h  inverted_index.h  relative_index.h  request_word_set.h  search_gui.h  search_line.h  search_server.h
json_files/: answers.json  config.json  requests.json
src/: CMakeLists.txt  converter_json.cpp  file_browser.cpp  file_browser.ui  inverted_index.cpp  main.cpp  search_gui.cpp  search_line.cpp  search_line.ui  search_server.cpp  tests.cpp
